fix: the position of subscribe buttons in p/all feed is bugged on narrow screen

--- a/src/components/post/post.module.css
+++ b/src/components/post/post.module.css
@@ -220,11 +220,6 @@
   border: 1px dashed gray;
 }
 
-.subscribeButtonWrapper {
-  padding-right: 14px;
-  position: relative;
-}
-
 .subscribeButton {
   position: absolute;
   border: none;
@@ -255,4 +250,8 @@
 
 .subscribeButtonWrapper:hover + .subplebbit {
   color: var(--green-bright) !important;
+}
+
+.subscribeButtonWrapper {
+  padding-right: 14px;
 }
